--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_redax",
+  "name": "react_redux",
   "version": "1.0.0",
   "description": "My_project",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NikeStark/React-Redax.git"
+    "url": "git+https://github.com/NikeStark/React-Redux.git"
   },
   "author": "Aliaksandr_Kazutsin <kazutin.1993@mail.ru>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NikeStark/React-Redax/issues"
+    "url": "https://github.com/NikeStark/React-Redux/issues"
   },
-  "homepage": "https://github.com/NikeStark/React-Redax#readme",
+  "homepage": "https://github.com/NikeStark/React-Redux#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
@@ -25,7 +25,12 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
